--- a/fwupgrade.html
+++ b/fwupgrade.html
@@ -55,6 +55,8 @@
           <p class="subtitle" id="subtitle" style="margin-top: 5px">This is the fingerprint</p>
           <span id="fingerprint"></span>
         </div>
+        <button class="g-btn green-btn" id="sign-psbt" type="button" onclick="signPsbt()">Sign PSBT</button>
+
         <img class="jade-img" src="images/jade.svg" alt="Jade" />
         <button class="hidden g-btn green-btn" id="retry-btn" type="button" onClick="window.location.reload()">
           Retry
